# dvbgi

./: .gitignore  CMakeLists.txt  README.md
Framework2/include/: commonnamespace.h  headers.h
Framework2/include/accelerationstructure/: accelerationstructure.h  accelerationstructuremanager.h
Framework2/include/atomiccounter/: atomiccounter.h
Framework2/include/buffer/: buffer.h  buffermanager.h
Framework2/include/camera/: camera.h  cameramanager.h
Framework2/include/component/: basecomponent.h  componentenum.h  componentmanager.h  dynamiccomponent.h  rendercomponent.h  sceneelementcontrolcomponent.h  skinnedmeshrendercomponent.h
Framework2/include/core/: coreenum.h  coremanager.h  eventsignalslot.h  functionpointer.h  gpupipeline.h  input.h  instance.h  logicaldevice.h  physicaldevice.h  surface.h  swapchain.h
Framework2/include/framebuffer/: framebuffer.h  framebuffermanager.h
Framework2/include/geometry/: bbox.h  triangle2d.h  triangle3d.h
Framework2/include/material/: exposedstructfield.h  material.h  materialantialiasing.h  materialbufferprefixsum.h  materialbuildstaticvoxeltilebuffer.h  materialcameravisibleraytracing.h  materialcolortexture.h  materialcomputefrustumculling.h  materialdistanceshadowmapping.h  materialdynamicscenevoxelization.h  materialdynamicvoxelcopytobuffer.h  materialdynamicvoxelvisibilityraytracing.h  materialenum.h  materialgbuffer.h  materialindirectcolortexture.h  materiallightbouncedynamiccopyirradiance.h  materiallightbouncedynamicvoxelirradiance.h  materiallightbouncedynamicvoxelirradiancecompute.h  materiallightbouncestaticvoxelfiltering.h  materiallightbouncestaticvoxelpadding.h  materiallightbouncevoxel2dgaussianfilter.h  materiallightbouncevoxelirradiance.h  materiallighting.h  materiallitvoxel.h  materialmanager.h  materialneighbourlitvoxelinformation.h  materialprocesscameravisibleresults.h  materialraytracingdeferredshadows.h  materialscenelightingdeferred.h  materialsceneraytrace.h  materialsceneraytracegeneration.h  materialsceneraytracerayhit.h  materialsceneraytraceraymiss.h  materialscenevoxelization.h  materialshadowmappingvoxel.h  materialskeletalanimationupdate.h  materialstaticneighbourinformation.h  materialtagcameravisiblevoxelneighbourtile.h  materialtemporalfilteringcleandynamic3dtextures.h  materialvoxelfaceindexstreamcompaction.h  (+2 more)
Framework2/include/math/: transform.h
Framework2/include/model/: model.h  modelenum.h
Framework2/include/node/: node.h
Framework2/include/parameter/: attributedata.h  attributedefines.h  multitypebase.h  multitypeimplementation.h  multitypeunorderedmap.h
Framework2/include/pipeline/: pipeline.h  pipelinedata.h
Framework2/include/rastertechnique/: antialiasingtechnique.h  bufferprefixsumtechnique.h  bufferprocesstechnique.h  cameravisibleraytracingtechnique.h  clear3dtexturestechnique.h  computefrustumcullingtechnique.h  distanceshadowmappingtechnique.h  dynamiclightbouncevoxelirradiancetechnique.h  dynamicscenevoxelizationtechnique.h  dynamicvoxelcopytobuffertechnique.h  dynamicvoxelvisibilityraytracingtechnique.h  gbuffertechnique.h  irradiancegaussianblurtechnique.h  lightbouncedynamicvoxelirradiancetechnique.h  lightbouncevoxelirradiancetechnique.h  litvoxeltechnique.h  processcameravisibleresultstechnique.h  rastertechnique.h  rastertechniqueenum.h  rastertechniquefactory.h  rastertechniquemanager.h  raytracingdeferredshadowstechnique.h  resetlitvoxeldatatechnique.h  sceneindirectdrawtechnique.h  scenelightingdeferredtechnique.h  scenelightingtechnique.h  scenerastercolortexturetechnique.h  sceneraytracingtechnique.h  scenevoxelizationtechnique.h  shadowmappingvoxeltechnique.h  skeletalanimationupdatetechnique.h  staticneighbourinformationtechnique.h  staticscenevoxelizationtechnique.h  voxelfaceindexstreamcompactiontechnique.h  voxelrasterinscenariotechnique.h  voxelvisibilityraytracingtechnique.h  voxelvisibilityraytracingtechniqueenum.h
Framework2/include/renderpass/: renderpass.h  renderpassmanager.h
Framework2/include/scene/: scene.h
Framework2/include/shader/: atomiccounterunit.h  image.h  pushconstant.h  resourceenum.h  sampler.h  shader.h  shadermanager.h  shaderreflection.h  shaderstoragebuffer.h  shaderstruct.h  shadertoplevelaccelerationstructure.h  uniform.h  uniformBase.h
Framework2/include/skeletalanimation/: skeletalanimation.h  skeletalanimationmanager.h
Framework2/include/texture/: irradiancetexture.h  texture.h  textureinfo.h  texturemanager.h
Framework2/include/uniformbuffer/: cpubuffer.h  uniformbuffer.h  uniformbuffermanager.h
Framework2/source/: main.cpp
data/vulkanshaders/: antialiasing.frag  antialiasing.vert  buildstaticvoxeltilebufferfirstpart.comp  buildstaticvoxeltilebuffersecondpart.comp  buildvoxelshadowmapgeometryfirstpart.comp  buildvoxelshadowmapgeometrysecondpart.comp  cameravisibleraytracingraygeneration.rgen  cameravisibleraytracingrayhit.rchit  cameravisibleraytracingraymiss.rmiss  computefrustumcullingfirstpart.comp  computefrustumcullingsecondpart.comp  distanceshadowmapping.frag  distanceshadowmapping.vert  dynamicvoxelcopytobufferfirstpart.comp  dynamicvoxelcopytobuffersecondpart.comp  gbuffer.frag  gbuffer.vert  indirectcolortexture.frag  indirectcolortexture.vert  lightbouncedynamiccopyirradiancefirstpart.comp  lightbouncedynamiccopyirradiancesecondpart.comp  lightbouncedynamicvoxelirradiance.rchit  lightbouncedynamicvoxelirradiance.rgen  lightbouncedynamicvoxelirradiance.rmiss  lightbouncedynamicvoxelirradiancefirstpart.comp  lightbouncedynamicvoxelirradiancesecondpart.comp  lightbouncestaticvoxelfilteringfirstpart.comp  lightbouncestaticvoxelfilteringsecondpart.comp  lightbouncestaticvoxelpaddingfirstpart.comp  lightbouncestaticvoxelpaddingsecondpart.comp  lightbouncevoxel2dfilterfirstpart.comp  lightbouncevoxel2dfiltersecondpart.comp  lightbouncevoxelirradiancefirstpart.comp  lightbouncevoxelirradiancesecondpart.comp  lighting.frag  lighting.vert  litvoxelfirstpart.comp  litvoxelsecondpart.comp  neighbourlitvoxelinformationfirstpart.comp  neighbourlitvoxelinformationsecondpart.comp  (+35 more)
(+117 files in other folders)
