cmake_minimum_required(VERSION 3.18)

project(dvbgi)

# Contains all libraries, data and shaders needed with pre-compiled .lib
file(ARCHIVE_EXTRACT INPUT ${CMAKE_SOURCE_DIR}/data/scenes/bistro_v5_1.zip DESTINATION ${CMAKE_SOURCE_DIR}/data/scenes)
file(ARCHIVE_EXTRACT INPUT ${CMAKE_SOURCE_DIR}/data/scenes/Stanford_dragon_manual.zip DESTINATION ${CMAKE_SOURCE_DIR}/data/scenes)
file(ARCHIVE_EXTRACT INPUT ${CMAKE_SOURCE_DIR}/external.zip DESTINATION ${CMAKE_SOURCE_DIR})

include_directories(${CMAKE_SOURCE_DIR}/external/assimp/include)
include_directories(${CMAKE_SOURCE_DIR}/external/gli)
include_directories(${CMAKE_SOURCE_DIR}/external/glm)
include_directories(${CMAKE_SOURCE_DIR}/external/glslang)
include_directories(${CMAKE_SOURCE_DIR}/external/nano-signal-slot)
include_directories(${CMAKE_SOURCE_DIR}/external/spirv-cross)
include_directories(${CMAKE_SOURCE_DIR}/external/spirv-cross/lib/Debug/x64)
include_directories(${CMAKE_SOURCE_DIR}/external/spirv-cross/lib/Release/x64)
include_directories(${CMAKE_SOURCE_DIR}/external/targaLoader)
include_directories(${CMAKE_SOURCE_DIR}/external/VulkanSDK/1.2.162.1/Include)
include_directories(${CMAKE_SOURCE_DIR}/external/VulkanSDK/1.2.162.1/Include/vulkan)
include_directories(${CMAKE_SOURCE_DIR}/external/VulkanSDK/1.2.162.1/Include/vulkan/Lib)
include_directories(${CMAKE_SOURCE_DIR}/Framework2)
include_directories(${CMAKE_SOURCE_DIR}/Framework2/include)
include_directories(${CMAKE_SOURCE_DIR}/Framework2/source)

set(INCLUDE_LIST
	"${CMAKE_SOURCE_DIR}/Framework2/include/commonnamespace.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/headers.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/accelerationstructure/accelerationstructure.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/accelerationstructure/accelerationstructuremanager.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/atomiccounter/atomiccounter.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/buffer/buffer.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/buffer/buffermanager.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/camera/camera.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/camera/cameramanager.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/component/basecomponent.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/component/componentenum.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/component/componentmanager.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/component/dynamiccomponent.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/component/rendercomponent.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/component/sceneelementcontrolcomponent.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/component/skinnedmeshrendercomponent.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/core/coreenum.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/core/coremanager.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/core/eventsignalslot.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/core/functionpointer.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/core/gpupipeline.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/core/input.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/core/instance.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/core/logicaldevice.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/core/physicaldevice.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/core/surface.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/core/swapchain.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/framebuffer/framebuffer.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/framebuffer/framebuffermanager.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/geometry/bbox.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/geometry/triangle2d.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/geometry/triangle3d.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/exposedstructfield.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/material.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialantialiasing.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialbufferprefixsum.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialbuildstaticvoxeltilebuffer.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialcameravisibleraytracing.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialcolortexture.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialcomputefrustumculling.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialdistanceshadowmapping.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialdynamicscenevoxelization.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialdynamicvoxelcopytobuffer.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialdynamicvoxelvisibilityraytracing.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialenum.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialgbuffer.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialindirectcolortexture.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materiallightbouncedynamiccopyirradiance.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materiallightbouncedynamicvoxelirradiance.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materiallightbouncedynamicvoxelirradiancecompute.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materiallightbouncestaticvoxelfiltering.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materiallightbouncestaticvoxelpadding.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materiallightbouncevoxel2dgaussianfilter.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materiallightbouncevoxelirradiance.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materiallighting.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materiallitvoxel.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialmanager.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialneighbourlitvoxelinformation.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialprocesscameravisibleresults.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialraytracingdeferredshadows.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialscenelightingdeferred.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialsceneraytrace.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialsceneraytracegeneration.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialsceneraytracerayhit.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialsceneraytraceraymiss.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialscenevoxelization.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialshadowmappingvoxel.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialskeletalanimationupdate.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialstaticneighbourinformation.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialtagcameravisiblevoxelneighbourtile.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialtemporalfilteringcleandynamic3dtextures.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialvoxelfaceindexstreamcompaction.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialvoxelrasterinscenario.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/material/materialvoxelvisibilityraytracing.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/math/transform.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/model/model.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/model/modelenum.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/node/node.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/parameter/attributedata.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/parameter/attributedefines.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/parameter/multitypebase.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/parameter/multitypeimplementation.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/parameter/multitypeunorderedmap.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/pipeline/pipeline.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/pipeline/pipelinedata.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/antialiasingtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/bufferprefixsumtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/bufferprocesstechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/cameravisibleraytracingtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/clear3dtexturestechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/computefrustumcullingtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/distanceshadowmappingtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/dynamiclightbouncevoxelirradiancetechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/dynamicscenevoxelizationtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/dynamicvoxelcopytobuffertechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/dynamicvoxelvisibilityraytracingtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/gbuffertechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/irradiancegaussianblurtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/lightbouncedynamicvoxelirradiancetechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/lightbouncevoxelirradiancetechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/litvoxeltechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/processcameravisibleresultstechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/rastertechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/rastertechniqueenum.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/rastertechniquefactory.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/rastertechniquemanager.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/raytracingdeferredshadowstechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/resetlitvoxeldatatechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/sceneindirectdrawtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/scenelightingdeferredtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/scenelightingtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/scenerastercolortexturetechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/sceneraytracingtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/scenevoxelizationtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/shadowmappingvoxeltechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/skeletalanimationupdatetechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/staticneighbourinformationtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/staticscenevoxelizationtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/voxelfaceindexstreamcompactiontechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/voxelrasterinscenariotechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/voxelvisibilityraytracingtechnique.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/rastertechnique/voxelvisibilityraytracingtechniqueenum.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/renderpass/renderpass.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/renderpass/renderpassmanager.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/scene/scene.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/shader/atomiccounterunit.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/shader/image.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/shader/pushconstant.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/shader/resourceenum.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/shader/sampler.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/shader/shader.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/shader/shadermanager.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/shader/shaderreflection.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/shader/shaderstoragebuffer.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/shader/shaderstruct.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/shader/shadertoplevelaccelerationstructure.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/shader/uniform.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/shader/uniformBase.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/skeletalanimation/skeletalanimation.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/skeletalanimation/skeletalanimationmanager.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/texture/irradiancetexture.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/texture/texture.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/texture/textureinfo.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/texture/texturemanager.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/uniformbuffer/cpubuffer.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/uniformbuffer/uniformbuffer.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/uniformbuffer/uniformbuffermanager.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/util/bufferverificationhelper.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/util/containerutilities.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/util/factorytemplate.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/util/genericresource.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/util/getsetmacros.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/util/io.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/util/lightingverificationhelper.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/util/logutil.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/util/loopmacrodefines.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/util/managertemplate.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/util/mathutil.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/util/objectfactory.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/util/singleton.h"
	"${CMAKE_SOURCE_DIR}/Framework2/include/util/vulkanstructinitializer.h"
)

set(SOURCE_LIST
	"${CMAKE_SOURCE_DIR}/Framework2/source/main.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/accelerationstrcuture/accelerationstructure.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/accelerationstrcuture/accelerationstructuremanager.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/atomiccounter/atomiccounter.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/buffer/buffer.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/buffer/buffermanager.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/camera/camera.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/camera/cameramanager.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/component/basecomponent.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/component/componentmanager.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/component/dynamiccomponent.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/component/rendercomponent.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/component/sceneelementcontrolcomponent.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/component/skinnedmeshrendercomponent.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/core/coremanager.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/core/eventsignalslot.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/core/functionpointer.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/core/gpupipeline.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/core/input.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/core/instance.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/core/logicaldevice.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/core/physicaldevice.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/core/surface.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/core/swapchain.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/framebuffer/framebuffer.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/framebuffer/framebuffermanager.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/geometry/bbox.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/geometry/triangle2d.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/geometry/triangle3d.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/material/exposedstructfield.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/material/material.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/material/materialmanager.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/math/transform.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/model/model.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/node/node.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/parameter/attributedefines.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/pipeline/pipeline.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/pipeline/pipelinedata.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/antialiasingtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/bufferprefixsumtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/bufferprocesstechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/cameravisibleraytracingtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/clear3dtexturestechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/computefrustumcullingtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/distanceshadowmappingtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/dynamiclightbouncevoxelirradiancetechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/dynamicscenevoxelizationtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/dynamicvoxelcopytobuffertechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/dynamicvoxelvisibilityraytracingtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/gbuffertechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/irradiancegaussianblurtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/lightbouncedynamicvoxelirradiancetechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/lightbouncevoxelirradiancetechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/litvoxeltechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/processcameravisibleresultstechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/rastertechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/rastertechniquefactory.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/rastertechniquemanager.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/raytracingdeferredshadowstechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/resetlitvoxeldatatechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/sceneindirectdrawtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/scenelightingdeferredtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/scenelightingtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/scenerastercolortexturetechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/sceneraytracingtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/scenevoxelizationtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/shadowmappingvoxeltechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/skeletalanimationupdatetechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/staticneighbourinformationtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/staticscenevoxelizationtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/voxelrasterinscenariotechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/rastertechnique/voxelvisibilityraytracingtechnique.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/renderpass/renderpass.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/renderpass/renderpassmanager.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/scene/scene.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/shader/atomiccounterunit.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/shader/image.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/shader/pushconstant.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/shader/resourceenum.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/shader/sampler.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/shader/shader.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/shader/shadermanager.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/shader/shaderreflection.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/shader/shaderstoragebuffer.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/shader/shaderstruct.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/shader/shadertoplevelaccelerationstructure.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/shader/uniformBase.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/skeletalanimation/skeletalanimation.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/skeletalanimation/skeletalanimationmanager.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/texture/irradiancetexture.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/texture/texture.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/texture/textureinfo.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/texture/texturemanager.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/uniformbuffer/cpubuffer.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/uniformbuffer/uniformbuffer.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/uniformbuffer/uniformbuffermanager.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/util/bufferverificationhelper.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/util/genericresource.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/util/io.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/util/lightingverificationhelper.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/util/logutil.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/util/mathutil.cpp"
	"${CMAKE_SOURCE_DIR}/Framework2/source/util/vulkanstructinitializer.cpp"
)

add_compile_definitions(_SILENCE_TR1_NAMESPACE_DEPRECATION_WARNING _SILENCE_EXPERIMENTAL_FILESYSTEM_DEPRECATION_WARNING)

add_definitions(-DVK_USE_PLATFORM_WIN32_KHR=1)

add_executable(dvbgi ${INCLUDE_LIST} ${SOURCE_LIST})

source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${INCLUDE_LIST}) # Create the source groups for source tree with root at CMAKE_CURRENT_SOURCE_DIR.
source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCE_LIST})  # Create the include groups for source tree with root at CMAKE_CURRENT_SOURCE_DIR.

set(LibrariesToLink 
	debug ${CMAKE_SOURCE_DIR}/external/VulkanSDK/1.2.162.1/Lib/vulkan-1.lib                       optimized ${CMAKE_SOURCE_DIR}/external/VulkanSDK/1.2.162.1/Lib/vulkan-1.lib
	debug ${CMAKE_SOURCE_DIR}/external/assimp/lib/Debug/x64/assimpd.lib                           optimized ${CMAKE_SOURCE_DIR}/external/assimp/lib/Release/x64/assimp.lib
	debug ${CMAKE_SOURCE_DIR}/external/spirv-cross/lib/Debug/x64/spirv-cross-cored.lib            optimized ${CMAKE_SOURCE_DIR}/external/spirv-cross/lib/Release/x64/spirv-cross-core.lib
	debug ${CMAKE_SOURCE_DIR}/external/spirv-cross/lib/Debug/x64/spirv-cross-glsld.lib            optimized ${CMAKE_SOURCE_DIR}/external/spirv-cross/lib/Release/x64/spirv-cross-glsl.lib
	debug ${CMAKE_SOURCE_DIR}/external/glslang/lib/Debug/x64/SPIRVd.lib                           optimized ${CMAKE_SOURCE_DIR}/external/glslang/lib/Release/x64/SPIRV.lib
	debug ${CMAKE_SOURCE_DIR}/external/glslang/lib/Debug/x64/glslangd.lib                         optimized ${CMAKE_SOURCE_DIR}/external/glslang/lib/Release/x64/glslang.lib
	debug ${CMAKE_SOURCE_DIR}/external/glslang/lib/Debug/x64/OGLCompilerd.lib                     optimized ${CMAKE_SOURCE_DIR}/external/glslang/lib/Release/x64/OGLCompiler.lib
	debug ${CMAKE_SOURCE_DIR}/external/glslang/lib/Debug/x64/OSDependentd.lib                     optimized ${CMAKE_SOURCE_DIR}/external/glslang/lib/Release/x64/OSDependent.lib
	debug ${CMAKE_SOURCE_DIR}/external/glslang/lib/Debug/x64/hlsld.lib                            optimized ${CMAKE_SOURCE_DIR}/external/glslang/lib/Release/x64/hlsl.lib
	debug ${CMAKE_SOURCE_DIR}/external/glslang/lib/Debug/x64/SPVRemapperd.lib                     optimized ${CMAKE_SOURCE_DIR}/external/glslang/lib/Release/x64/SPVRemapper.lib
	debug ${CMAKE_SOURCE_DIR}/external/glslang/lib/Debug/x64/GenericCodeGend.lib                  optimized ${CMAKE_SOURCE_DIR}/external/glslang/lib/Release/x64/GenericCodeGen.lib
	debug ${CMAKE_SOURCE_DIR}/external/glslang/lib/Debug/x64/glslang-default-resource-limitsd.lib optimized ${CMAKE_SOURCE_DIR}/external/glslang/lib/Release/x64/glslang-default-resource-limits.lib
	debug ${CMAKE_SOURCE_DIR}/external/glslang/lib/Debug/x64/MachineIndependentd.lib              optimized ${CMAKE_SOURCE_DIR}/external/glslang/lib/Release/x64/MachineIndependent.lib
)

target_link_libraries(dvbgi ${LibrariesToLink})
